# lcars-tng-computer

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: images.yml
appliance/: .env.example  docker-compose.yml
apps/ear/: README.md  pyproject.toml
apps/server/: package.json
apps/server/src/: composite.ts  history.ts  (+6 more)
apps/tricorder/: README.md  package.json  tsconfig.json  wrangler.jsonc
apps/tts/: pyproject.toml
apps/tts/src/tng_tts/: server.py
apps/web/: index.html  package.json  vite.config.ts
claude/: .mcp.json  CLAUDE.md  settings.json
claude/.claude/: settings.json
claude/hooks/: pretool-abort.sh  stop-rearm.sh
docker/: Dockerfile  allowed-domains.txt  appliance-computer-entrypoint.sh  appliance-computer.Dockerfile  appliance-stack.Dockerfile  entrypoint.sh  init-firewall.sh  plugin-merge.sh  stack.Dockerfile  tng-cli.mjs
docs/: APPLIANCE.md  AUDIO_FALLBACK_IMPLEMENTATION_DESIGN.md  DESIGN.md  PLAYBACK_LAYER_IMPLEMENTATION_DESIGN.md  PLUGIN_SYSTEM_DESIGN.md  TRICORDER_LIBRARY_IMPLEMENTATION_DESIGN.md  TRICORDER_LIBRARY_PWA_UX_DESIGN.md  TRICORDER_PLAN.md  VOICE_VOLUME_IMPLEMENTATION_DESIGN.md
docs/sops/: SOPS.md  adding-new-panels.md  adding-plugins.md  adding-widgets.md  computer-container.md  karaoke-mode-implementation.md  lighting-ops.md  tv-room-kiosk.md
plugins/: README.md
plugins/lighting/: README.md  compose.yaml  plugin.json
scripts/: appliance-stack.mjs  dev.mjs  expose-lan.ps1  gen-earcons.mjs  gen-sky-catalog.py  kiosk.sh  say.sh
(+84 files in other folders)
