[project]
name = "tng-tts"
version = "0.1.0"
description = "TNG Computer TTS sidecar: /synth text -> WAV. Piper baseline now, Qwen3-TTS Majel clone slot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "piper-tts>=1.2",
]

[project.scripts]
tng-tts = "tng_tts.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tng_tts"]
